# agora.gdn

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  Pipfile  README.md  lefthook.yml  pyproject.toml  requirements.txt
.github/workflows/: build-push-docker.yaml  e2e-testing.yaml  test-and-typecheck.yaml
agora/: api.py  api_v1.py  context_processors.py  settings.py  urls.py
agora/core/: apps.py  views.py
agora/core/templates/core/profile/: self.html
agora/newsletter/: README.md  admin.py  api.py  apps.py  models.py  services.py
agora/newsletter/migrations/: 0001_initial.py
agora/static/: site.webmanifest
agora/static/css/: reset.css
agora/templates/: 404.html  base.html
agora/templates/account/: confirm_email_verification_code.html  confirm_login_code.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  password_set.html  reauthenticate.html  request_login_code.html  signup.html  signup_by_passkey.html
agora/templates/account/snippets/: already_logged_in.html
agora/templates/allauth/elements/: button_group.html  field.html  fields.html  form.html  h1.html  h2.html  p.html
agora/templates/allauth/layouts/: base.html
agora/templates/form/fields/: input.html
agora/templates/includes/: footer.html  header.html  meta.html
agora/templates/mfa/: authenticate.html  index.html  reauthenticate.html
agora/templates/mfa/recovery_codes/: generate.html  index.html
agora/templates/mfa/totp/: activate_form.html  deactivate_form.html
agora/templates/mfa/webauthn/: add_form.html  authenticator_confirm_delete.html  edit_form.html  reauthenticate.html  signup_form.html
ansible/: ansible.cfg  inventory  main.yaml  production  requirements.yaml
ansible/files/ssh/: id_agora_dokku_ed25519.pem  id_agora_dokku_ed25519.pub
ansible/templates/borgmatic/: config.yaml.j2
ansible/templates/caddy/: Caddyfile.j2
ansible/templates/gunicorn/: gunicorn.conf.py.j2
ansible/templates/systemd/: app.service.j2  app.socket.j2
app_name/: apps.py-tpl
brand/: .postcssrc.json  biome.jsonc  package-lock.json  package.json  tailwind.config.js
brand/assets/: agora.js
brand/assets/css/: tailwind.css
brand/static/brand/: agora.css  agora.css.map  agora.js  agora.js.map  tailwind.css  tailwind.css.map
brand/static/brand/css/: tailwind.css
conf/caddy/: Caddyfile
conf/gunicorn/: gunicorn.conf.py
conf/systemd/: README.md  agora.service  agora.socket
design-docs/: 001-profile-visibility.md
design-docs/_templates/: design-doc--simple.md  design-doc.md
drawings/: onboarding_checks.excalidraw
e2e/: package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  user-registration.spec.ts
e2e/mail/: README.md
frontend/@agora/agora/: biome.jsonc  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/@agora/agora/src/: agora.ts  clipboard.ts  newsletter.tsx  tailwind.css
frontend/@agora/agora/src/components/: NewsletterForm.tsx
home/: admin.py  forms.py  models.py  views.py
home/migrations/: 0001_initial.py  0002_blogindexpage_blogpage_and_more.py  0003_remove_blogpage_tag_blogpage_category_blogpage_tags_and_more.py  0003_waitinglistsignup_waitingpage_delete_homepage.py  0004_alter_waitinglistsignup_id_and_more.py  0004_waitinglistsignup_referral_code_and_more.py  0005_alter_blogpage_category_and_more.py  0005_alter_waitinglistsignup_referral_code.py  0006_alter_waitinglistsignup_referral_code_blogpagetag_and_more.py  0007_alter_waitinglistsignup_referral_code.py
home/static/css/: home_page.css
home/templates/home/: blog_base.html  blog_index_page.html  blog_page.html  careers.html  home_page.html  profile.html  waiting_list_signup_form.html  waiting_page.html
search/: views.py
user/: admin.py  api.py  decorators.py  forms.py  managers.py  middleware.py  models.py  password_validation.py  selectors.py  services.py  tests.py  urls.py  views.py  webhooks.py
user/migrations/: 0001_initial.py  0002_identityverification_verified_at_alter_agorauser_id.py  0003_userdateofbirth.py  0004_alter_identityverification_identity_issuing_country.py  0005_identityverification_last_error_code_and_more.py  0006_agorauser_visibility.py  0006_remove_userdateofbirth_day_and_more.py  0007_alter_agorauser_options_and_more.py
user/templates/user/: dashboard.html
user/templates/user/includes/: profile.html
user/templates/user/onboarding/: base.html  billing.html  identity.html  identity_pending.html
user/templatetags/: user.py
user/tests/: test_e2e.py  test_fully_onboarded_middleware.py
user/tests/utils/: faker.py  selectors.py  services.py
utils/: ip.py  log.py  models.py  privacy.py
utils/tests/: test_privacy.py
utils/typing/: request.py
