[project]
name = "agora.gdn"
version = "0.1.0"
dependencies = [
    "wagtail",
    "django-environ",
    "django-extensions",
    "django-model-utils",
    "pillow",
    "nh3",
    "cuid2",
    "whitenoise[brotli]",
    "gunicorn",
    "readtime",
    "watchfiles",
    "django[argon2]>=5.1.0",
    "django-countries",
    "django-allauth[mfa]>=65.3.1",
    "snowflake-id>=1.0.2",
]
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "djlint",
    "ansible",
    "werkzeug>=3.1.3",
    "pyopenssl>=25.0.0",
    "django-stubs[compatible-mypy]>=5.1.2",
    "mypy>=1.14.1",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Disable conflicting linting/formatting checks
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
# Don't use them all but disable them just in case that changes
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.djlint]
profile="django"
ignore="H030,H031,H021"

[tool.mypy]
mypy_path = "."
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
exclude = ["migrations", "node_modules", ".venv", "ansible/roles", ".ruff_cache"]
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.django-stubs]
django_settings_module = "agora.settings"
strict_settings = true